Closed
Bug 792833
Opened 9 years ago
Closed 9 years ago
Don't unset current transaction until after savepoint has been released
Categories
(Core :: Storage: IndexedDB, defect)
Core
Storage: IndexedDB
Tracking
()
RESOLVED
FIXED
mozilla18
People
(Reporter: bent.mozilla, Assigned: bent.mozilla)
Details
(Whiteboard: [qa?])
Attachments
(1 file)
1.16 KB,
patch
|
khuey
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta-
|
Details | Diff | Splinter Review |
Found while looking at bug 792547. Basically the quota prompt will fail if we're in a savepoint release when the quota is exceeded. Simple patch.
Attachment #663009 -
Flags: review?(khuey)
Attachment #663009 -
Flags: review?(khuey) → review+
Assignee | ||
Comment 1•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/30ae02a8ce8c
Assignee | ||
Comment 2•9 years ago
|
||
Comment on attachment 663009 [details] [diff] [review] Patch, v1 [Approval Request Comment] Bug caused by (feature/regressing bug #): Initial quota management implementation User impact if declined: Crash and/or undefined behavior when a quota prompt is about to be displayed. Testing completed (on m-c, etc.): m-i for now, m-c tomorrow Risk to taking this patch (and alternatives if risky): This patch is exceptionally simple, almost guaranteed to be risk free. String or UUID changes made by this patch: None
Attachment #663009 -
Flags: approval-mozilla-beta?
Attachment #663009 -
Flags: approval-mozilla-aurora?
Comment 3•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/30ae02a8ce8c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
Comment 4•9 years ago
|
||
Comment on attachment 663009 [details] [diff] [review] Patch, v1 It's too late to take this on Beta and check for crash volume on something which has no crash signature or history of crashing so let's put this on Aurora and ride the train from there.
Attachment #663009 -
Flags: approval-mozilla-beta?
Attachment #663009 -
Flags: approval-mozilla-beta-
Attachment #663009 -
Flags: approval-mozilla-aurora?
Attachment #663009 -
Flags: approval-mozilla-aurora+
Assignee | ||
Comment 5•9 years ago
|
||
https://hg.mozilla.org/releases/mozilla-aurora/rev/2593ecab46c6
status-firefox15:
--- → affected
status-firefox16:
--- → wontfix
status-firefox17:
--- → fixed
status-firefox18:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•