Bug 792833 - 'Do not unset current transaction until after savepoint has been released'. r=khuey.